attempt at fixing wrap issues

--- a/wiki.css
+++ b/wiki.css
@@ -21,7 +21,6 @@ body {
     padding: 5px 5px 5px 5px;
     background-color: var(--white);
     overflow-wrap: break-word;
-    word-break: break-all;
 }
 
 nav {
